# code-for-bharat

./: README.md
ai/: README.md
ai/Curricula/: .gitignore  main.py  pyproject.toml  requirements.txt  testing_data.py
ai/Curricula/agents/: planner.py  task_elaboration.py  tasker.py
ai/Curricula/api/: serve.py
ai/Curricula/core/: llm_client.py
ai/Curricula/prompts/: planner.txt  task_elaboration.txt  tasker.txt
backend/: db.sqlite3  requirements.txt
backend/app/: models.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_roadmap.py  0003_roadmap_progress_week_task.py  0004_credential.py
backend/app/utils/: jwt_utils.py  resume_parser.py
backend/backend/: settings.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/app/dashboard/: layout.jsx  page.jsx
frontend/src/app/login/: page.jsx
frontend/src/app/signup/: page.jsx
frontend/src/components/: ClientFaviconHandler.jsx  ClientLayout.jsx  Navbar.jsx  ParticleMesh.jsx
frontend/src/components/UI/: AnimatedBackground.jsx  BinaryRain.jsx  CrazyNavbar.jsx  CyberNavbar.jsx  CyberPunkScanLines.jsx  DynamicFavicon.jsx  FeatureCard.jsx  FloatingOrbs.jsx  GlitchText.jsx  GlobalLoader.jsx  GradientButton.jsx  HolographicButton.jsx  HolographicDisplay.jsx  NeonCursorTrail.jsx  NeuCard.jsx  ParticleNetwork.jsx  ResumeUploader.jsx  StarIcon.jsx
frontend/src/components/dashboard/: RefineRoadmapModal.jsx  (+1 more)
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: mockRoadmap.js  roadmapUtils.js
(+30 files in other folders)
